zzz_deprecated/velero-networkpolicies/netpol-velero-minio-connect.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: netpol-velero-minio-egress
  namespace: velero
spec:
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: velero
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: tailscale
            tailscale.com/parent-resource: expose-apollo
      toPorts:
        - ports:
            - port: "9090"

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: netpol-velero-minio-ingress
  namespace: tailscale
spec:
  endpointSelector:
    matchLabels:
      tailscale.com/parent-resource: expose-apollo
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: velero
      toPorts:
        - ports:
            - port: "9090"
