zzz_deprecated/velero-networkpolicies/netpol-velero.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: netpol-velero
  namespace: velero
spec:
  endpointSelector:
    matchLabels:
      name: velero
  egress:
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
